# smart-fluid-flow-meter

./: .gitmodules  README.md
.circleci/: config.yml
backend/: .env.sample  Cargo.toml  Makefile  README.md
backend/assets/db-migrations/: 0001_create_initial_tables.sql  0002_password_recovery.sql  0003_add_name_to_user_table.sql  0003_metadata.sql  0004_fluid_meter_updated_at.sql
backend/dockerfiles/: docker-compose-dev.yaml  docker-compose-firestore.yaml  docker-compose-mysql.yaml  docker-compose-test.yaml  prod
backend/src/: api.rs  handler.rs  helper.rs  lib.rs  logging.rs  main.rs  middleware.rs  storage.rs
backend/src/api/: alert.rs  common.rs  email_verification.rs  fluid_meter.rs  measurement.rs  metadata.rs  user.rs
backend/src/error/: app_error.rs
backend/src/handler/: alert.rs  fluid_meter.rs  measurement.rs  user.rs
backend/src/helper/: alert.rs  mail.rs  measurement.rs  token.rs  user.rs
backend/src/http_client/: cloudflare.rs
backend/src/json/: extractor.rs
backend/src/logging/: level_filter_wrapper.rs
backend/src/middleware/: auth.rs  debug_request.rs
backend/src/settings/: settings.rs
backend/src/storage/: error.rs  firestore.rs  mock.rs  mysql.rs  postgres.rs
backend/src/storage/firestore/: fluid_meter.rs  measurement.rs  user.rs
backend/src/storage/postgres/: fluid_meter.rs  measurement.rs  metadata.rs  user.rs
backend/tests/: main.rs
backend/tests/config/: default.yaml
backend/tests/handler/: alert.rs  fluid_meter.rs  measurement.rs  mod.rs  user.rs
backend/tests/helper/: app.rs  fluid_meter.rs  mod.rs
(+66 files in other folders)
