[package]
name = "smart_fluid_flow_meter_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.8.1", features = ["macros"] }
bcrypt = "0.16.0"
chrono = { version = "0.4.37", features = ["serde"] }
config = "0.14.0"
email_address = "0.2.9"
futures = "0.3.31"
mockall = "0.13.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zxcvbn = "3.1.0"
once_cell = "1.20.2"
http = "1.2.0"
uuid = { version = "1.12.1", features = ["v4"] }
http-body-util = "0.1.0"

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3"
test-log = "0.2.15"
